--- a/index.html
+++ b/index.html
@@ -470,6 +470,9 @@ $(window).on('load', function () {
 
 </head>
 <h1>Zwicky's Morphological Analysis online</h1>
+
+<a href="https://github.com/JohannesBuchner/zwicky-morphological-analysis/"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
+
 <form name="myform" id="myform">
 
 <div class="step">
